--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
+h1, h2, h3, p, li {
+  font-family: bitter;
+  color: white;
+}
+
 .container {
   margin: 0 auto;
   padding: 40px;
@@ -6,8 +11,161 @@
   background: #419be0;
 }
 
-.slick-slide {
+.single-item {
   text-align: center;
-  color: #419be0;
-  background: white;
+  color: black;
+  background: gray;
+  height: 500px;
+}
+
+.slick-slider .slick-track, .slick-slider .slick-list {
+  height: inherit;
+}
+
+/* HISTORY SLIDE */
+.history-slide {
+  background-image: url("../img/baked-close-up-potato.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 500px;
+}
+
+.history-slide h1, p {
+  position: relative;
+  top: 20%;
+}
+
+.history-slide h1 {
+  font-size: 50px;
+}
+
+/* QUIZ SLIDE */
+/* BASE QUIZ STYLES */
+/* These styles ensure that the necessary elements are hidden for toggling */
+/* DO NOT EDIT UNLESS YOU KNOW WHAT YOU ARE DOING!! */
+.startQuiz,
+.nextQuestion,
+.backToQuestion,
+.questions li.question,
+.questions li.question .responses,
+.questions li.question .responses .correct,
+.questions li.question .responses .incorrect,
+.quizResults {
+  display: none;
+}
+
+/* If response messages are disabled or only shown on quiz completion,
+   nextQuestion button IS checkAnswer button - so it must be displayed */
+.nextQuestion.checkAnswer {
+  display: block;
+}
+
+ol.questions,
+ul.answers,
+ul.responses,
+ol.questions li,
+ul.answers li,
+ul.responses li {
+  list-style-type: none;
+}
+
+.button {
+  width: auto;
+  padding: 5px 15px;
+  color: #ffffff;
+  background-color: #419be0;
+  border: 1px solid #fff;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  text-decoration: none;
+}
+
+.button:hover {
+  background-color: darkslategray;
+}
+
+.startQuiz {
+  margin-top: 40px;
+}
+
+.tryAgain {
+  float: none;
+  margin: 20px 0;
+}
+
+/* clearfix */
+.quizArea, .quizResults {
+  zoom: 1;
+}
+
+.quizArea:before, .quizArea:after, .quizResults:before, .quizResults:after {
+  content: "\0020";
+  display: block;
+  height: 0;
+  visibility: hidden;
+  font-size: 0;
+}
+
+.quizArea:after, .quizResults:after {
+  clear: both;
+}
+
+.questionCount {
+  font-size: 14px;
+  font-style: italic;
+}
+
+.questionCount span {
+  font-weight: bold;
+}
+
+ol.questions {
+  margin-top: 20px;
+  padding: 0;
+}
+
+ol.questions li {
+  margin-left: 0;
+}
+
+ul.answers {
+  margin-bottom: 20px;
+}
+
+ul.responses li {
+  margin: 10px 20px 20px;
+}
+
+ul.responses li p span {
+  display: block;
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.complete ul.answers li.correct, ul.responses li.correct p span {
+  color: #6C9F2E;
+}
+
+ul.responses li.incorrect p span {
+  color: #B5121B;
+}
+
+.quizResults h3 {
+  margin: 0;
+}
+
+.quizResults h3 span {
+  font-weight: normal;
+  font-style: italic;
+}
+
+.quizResultsCopy {
+  clear: both;
+  margin-top: 20px;
+}
+
+/* SOURCES-SLIDE */
+.sources-slide li {
+  text-align: left;
 }
