--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@ h2 {
 }
 
 h3 {
-  font-size: 1.5rem;
+  font-size: 1.25rem;
 }
 
 p, label, .question, #plantQuizSubmit, a, li {
@@ -292,6 +292,10 @@ ul {
   position: relative;
 }
 
+.question {
+  width: 95%;
+}
+
 .startQuiz,
 .nextQuestion,
 .backToQuestion,
@@ -328,6 +332,7 @@ ul.responses li {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
+  float: right;
   text-decoration: none;
 }
 
@@ -359,6 +364,8 @@ ul.responses li {
 /* clearfix */
 .quizArea, .quizResults {
   zoom: 1;
+  text-align: left;
+  margin: 2% 5%;
 }
 
 .quizArea:before, .quizArea:after, .quizResults:before, .quizResults:after {
@@ -383,12 +390,11 @@ ul.responses li {
 }
 
 ol.questions {
-  margin-top: 20px;
   padding: 0;
 }
 
 ol.questions li {
-  margin-left: 0;
+  margin: 10px 20px;
   display: block;
 }
 
@@ -444,11 +450,12 @@ ul.responses li.incorrect p span {
   }
 
   p, label, .question, #plantQuizSubmit, a, li, .tooltiptext {
-    font-size: 80%;
+    font-size: 100%;
   }
 
   label, .question {
-    margin: 0 0.5rem;
+    margin: 0;
+    display: inline;
   }
 
   .slick-dots {
